# electronics_design

./: .gitignore  Cargo.toml  LICENSE  README.md  electronics_design.tex  manual.tex  requirements.txt  technical_details.tex
ElectronicsDesign/: ElectronicsDesign.pro  LibraryEditor.qml  design.cpp  design.h  footprintdraw.cpp  footprintdraw.h  harness.cpp  harness.h  library.cpp  library.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  pcb.cpp  pcb.h  resources.qrc  schematic.cpp  schematic.h  schematicsymbol.cpp  schematicsymbol.h
build-ElectronicsDesign-Desktop_Qt_5_12_2_MSVC2017_32bit-Debug/debug/: moc_mainwindow.cpp
rust/: Cargo.toml
rust/src/: main.rs  schematic.rs  symbol.rs
rust/src/window/: library.rs  library_name.rs
src/: component.rs  general.rs  ipc.rs  library.rs  main.rs  main_common.rs  main_library.rs  main_schematic.rs  schematic.rs  symbol.rs
src/window/: component_name.rs  component_variant_name.rs  library.rs  library_name.rs  mod.rs  schematic.rs  symbol_name.rs
