[package]
name = "electronics_design"
version = "0.1.0"
authors = ["Thomas Epperson <thomas.epperson@gmail.com>"]
license = "Closed"
edition = "2021"
rust-version = "1.60"
publish = false

[dependencies]
bincode = "1.3.3"
eframe = "0.22.0"
futures = "0.3.28"
rfd = "0.11.4"
serde = {version = "1.0.164", features = ["derive"]}
toml_edit = "0.14.3"

[[bin]]
name = "ElectronicsDesign"
path = "src/main.rs"