[package]
name = "electronics_design"
version = "0.1.0"
authors = ["Thomas Epperson <thomas.epperson@gmail.com>"]
license = "Closed"
edition = "2021"
rust-version = "1.60"
publish = false

[dependencies]
bincode = "1.3.3"
directories = "5.0.1"
egui-multiwin = "0.1.2"
futures = "0.3.28"
native-dialog = "0.6.4"
rfd = "0.11.4"
serde = {version = "1.0.164", features = ["derive"]}
strum = { version = "0.25.0", features = ["derive"] }
toml_edit = "0.14.3"
undo = "0.49.0"

[[bin]]
name = "electronics_design"
path = "src/main.rs"